<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/main_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_companies"
            android:icon="@drawable/ic_explore_black_24dp"
            android:title="@string/nav_companies" />

    </group>

    <group android:id="@+id/second_group"
        android:checkableBehavior="none">

        <item android:id="@+id/nav_switch_theme"
            android:icon="@drawable/ic_brightness_6_black_24dp"
            android:title="@string/nav_switch_theme"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/nav_about" />

    </group>

</menu>
