<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Copyright(c) 2017 lizhaotailang
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/action_set_readable"
        android:orderInCategory="97"
        android:title="@string/set_unread" />

    <item android:id="@+id/action_share"
        android:orderInCategory="99"
        android:title="@string/share" />

    <item android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/delete" />

    <item android:id="@+id/action_copy_code"
        android:orderInCategory="98"
        android:title="@string/copy_code" />

</menu>